{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 45,
  "lineage": "c8dc5d77-74af-c88e-23c9-70512c8aad87",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:internet-gateway/igw-08e1839af013e237e",
            "id": "igw-08e1839af013e237e",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab01-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab01-igw",
              "Organization": "tf-core",
              "Project": "lab01"
            },
            "vpc_id": "vpc-03026ddd77131f8ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-0a6b73abb238ff3db",
            "id": "rtb-0a6b73abb238ff3db",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e1839af013e237e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab01-rtb-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab01-rtb-public-a",
              "Organization": "tf-core",
              "Project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03026ddd77131f8ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-0a6b73abb238ff3db",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:route-table/rtb-08c76d7168996dd7a",
            "id": "rtb-08c76d7168996dd7a",
            "owner_id": "865509656639",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e1839af013e237e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-core-lab01-rtb-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab01-rtb-public-b",
              "Organization": "tf-core",
              "Project": "lab01"
            },
            "timeouts": null,
            "vpc_id": "vpc-03026ddd77131f8ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtb-08c76d7168996dd7a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7ee86bb91c11e9c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0a6b73abb238ff3db",
            "subnet_id": "subnet-084ad644e1ce828d0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0b7ee86bb91c11e9c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_0",
            "module.network.aws_subnet.public_0",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0798d20c4927b38d7",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-08c76d7168996dd7a",
            "subnet_id": "subnet-053ead158068be4f5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "rtbassoc-0798d20c4927b38d7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_1",
            "module.network.aws_subnet.public_1",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-084ad644e1ce828d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ad644e1ce828d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab01-subnet-public-a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab01-subnet-public-a",
              "Organization": "tf-core",
              "Project": "lab01"
            },
            "vpc_id": "vpc-03026ddd77131f8ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-084ad644e1ce828d0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:subnet/subnet-053ead158068be4f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053ead158068be4f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865509656639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab01-subnet-public-b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab01-subnet-public-b",
              "Organization": "tf-core",
              "Project": "lab01"
            },
            "vpc_id": "vpc-03026ddd77131f8ec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "subnet-053ead158068be4f5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:865509656639:vpc/vpc-03026ddd77131f8ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00611346612f7228a",
            "default_route_table_id": "rtb-065e3cfb13754f146",
            "default_security_group_id": "sg-03466111c56eb25b0",
            "dhcp_options_id": "dopt-018f05c8d8ab5dc53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03026ddd77131f8ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065e3cfb13754f146",
            "owner_id": "865509656639",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tf-core-lab01-vpc-main"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-core-lab01-vpc-main",
              "Organization": "tf-core",
              "Project": "lab01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865509656639",
            "id": "vpc-03026ddd77131f8ec",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}